--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@ Valor: <input id="valor" type="text"> <br>
 Taxa de Juros: <input id="juros" type="text"> <br>
 <button onclick="total()">Enviar</button>
 
+<br><br><br><br>
+<span id="resultado"></span><br><br>
+Bimestre 01: <input id="b1" type="text"> <br>
+Bimestre 02: <input id="b2" type="text"> <br>
+Bimestre 03: <input id="b3" type="text"> <br>
+Bimestre 04: <input id="b4" type="text"> <br>
+<button onclick="soma()">Soma Notas</button>
+<button onclick="Media()">Media das notas</button>
+<button onclick="Falta()">Quanto Falta</button>
+
 </body>
 </html>
