--- a/index.html
+++ b/index.html
@@ -10,10 +10,91 @@
 </head>
 <body>
 
-Valor: <input id="valor" type="text"> <br>
+Capital: <input id="valor" type="text"> <br>
 Taxa de Juros: <input id="juros" type="text"> <br>
-<button onclick="total()">Enviar</button>
+Quantidade messe: <input id="meses" type="text"> <br>
+
+
+
+<button onclick="total()">Calcular</button>
 
 </body>
 </html>
 Footer
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
