--- a/index.html
+++ b/index.html
@@ -12,89 +12,10 @@
 
 Capital: <input id="valor" type="text"> <br>
 Taxa de Juros: <input id="juros" type="text"> <br>
-Quantidade messe: <input id="meses" type="text"> <br>
 
-
+Quantidade meses: <input id="meses" type="text"> <br>
 
 <button onclick="total()">Calcular</button>
 
 </body>
 </html>
-Footer
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
