--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 <body>
     <div class="calculadora">
+    <input type="checkbox" id="calcFin">
 
+      <label for="calcFin"><h3>Financeira</h3></label>
+
+        <div class="calcF"></div>
         <div class="spResultado">
             <span id="resultado">Total:0,0</span><br>
         </div>
@@ -22,10 +26,8 @@
         Taxa de Juros: <input id="juros" type="text"> <br>
         Quantidade meses: <input id="meses" type="text"> <br>
         <button id="btnCalc" onclick="total()">Calcular</button>
-    </div>
-    <div>
-        <span id="mes">Mês a Mês</span>
-    </div>
+    </div class="spMes">
+         <span id="mes"></span>
+        </div>
 </body>
 </html>
-
